[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "hive-nektar"
version = "1.1.1"
description = "Nektar, Hive API SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "LICENSE.txt"
keywords = ["nektar", "hive", "blockchain", "api", "sdk"]
authors = [
    { name="Rodney Maniego Jr." },
    { email="rodney.maniegojr@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
  "ecdsa",
  "requests"
]

[project.urls]
homepage = "https://github.com/rmaniego/nektar"
documentation = "https://nektar.readthedocs.io"
